--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,19 @@ http {
         server pozor_dom_auth_service:8080;
     }
 
+    upstream store_service {
+        server pozor_dom_store_service:8080;
+    }
+
     server {
         listen 80;
 
         location /api/v1/auth/ {
             proxy_pass http://auth_service;
+        }
+
+        location /api/v1/auth/ {
+            proxy_pass http://store_service;
         }
     }
 }
