--- a/nginx.conf
+++ b/nginx.conf
@@ -12,13 +12,13 @@ http {
     }
 
     server {
-        listen 8090;
+        listen 80;
 
         location /api/v1/auth/ {
             proxy_pass http://auth_service;
         }
 
-        location /api/v1/auth/ {
+        location /api/v1/store/ {
             proxy_pass http://store_service;
         }
     }
