feat: configure devices service

--- a/_gateway/nginx.conf
+++ b/_gateway/nginx.conf
@@ -4,12 +4,12 @@ events {
 
 http {
     upstream auth_service {
-        server pozor_dom_auth_service:8080;
+        server pozor_dom_auth_service:80;
     }
 
-    # upstream store_service {
-    #     server pozor_dom_store_service:8080;
-    # }
+    upstream device_service {
+        server pozor_dom_device_service:80;
+    }
 
     server {
         listen 80;
@@ -27,12 +27,8 @@ http {
             proxy_pass http://auth_service;
         }
 
-        # location /api/v1/store/ {
-        #     auth_request /_auth_validate;
-        #     auth_request_set $user_id $upstream_http_x_user_id;
-
-        #     proxy_pass http://store_service;
-        #     proxy_set_header X-User-Id $user_id;
-        # }
+        location /api/v1/store/ {
+            proxy_pass http://device_service;
+        }
     }
 }
