--- a/.env
+++ b/.env
@@ -3,9 +3,15 @@ AUTH_POSTGRES_USER=root
 AUTH_POSTGRES_PASSWORD=root
 AUTH_POSTGRES_DB=pozor_dom_auth_service
 
+DEVICE_POSTGRES_PORT=5435
+DEVICE_POSTGRES_USER=root
+DEVICE_POSTGRES_PASSWORD=root
+DEVICE_POSTGRES_DB=pozor_dom_device_service
+
 PGADMIN_DEFAULT_EMAIL=root@local.com
 PGADMIN_DEFAULT_PASSWORD=root
 
 AUTH_SERVICE_PORT=5000
+DEVICE_SERVICE_PORT=5000
 
 GATEWAY_PORT=80
